--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "flowbite": "^2.0.0",
@@ -22,6 +23,7 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
+    "react-table": "^7.8.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
   },
