--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^5.3.11",
     "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
