--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
